welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: illegal start of simple expression
    if(estFaceMur && Direction.EST=){
                                   ^SnakeBuggle:11: error: ')' expected but '}' found.
  }
  ^