welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var x:Int=0
  baisseBrosse()
  avance()
  while(!x){
    avance()
    if(estFaceMur && Direction.EST=){
      return true
    }
    return false
  }
}